<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, VideoPlayer!</string>
    <string name="app_name">小羊直播</string>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="load_luanching">正在启动···</string>
    <string name="load_import">正在导入数据···</string>
    <string name="load_check_data_new">正在检查数据更新···</string>
    <string name="load_channel_data">正在获取频道更新···</string>
    <string name="load_plugins">正在更新插件数据···</string>
    <string name="load_epgs">正在获取节目预告信息···</string>
    <string name="load_finish">启动完成！即将播放！</string>
    <string name="version_tips">"版本:1s
作者: 匿名

本机IP:1s

"</string>
    <string name="dialog_update_title">发现更新</string>
    <string name="dialog_update_msg">版本号:</string>
    <string name="dialog_update_btnupdate">立即更新</string>
    <string name="dialog_update_btnnext">下次再说</string>
    <string name="dialog_downloading_msg">正在下载......</string>
    <string name="dialog_alert_title">警告</string>
    <string name="dialog_downfailed_btndown">重新下载</string>
    <string name="dialog_downfailed_btnnext">暂不下载</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_downfailed_msg">下载失败,是否重试？</string>
    <string name="dialog_downfailed_msg_no_package">没有发现对应的安装包,是否下载官方包？</string>
    <string name="dialog_downfailed_again">重试</string>
    <string name="error">启动故障，请重试</string>
    <string name="wangluo">同步网络收藏成功</string>
    <string name="wangluodown">网络收藏失败</string>
    <string name="setwifi">网络连接失败,是否进行网络设置？</string>
    <string name="first_get_catch">初始化节目列表失败,请检查网络</string>
    <string name="setwifimac">获取无线Mac失败，请打开WiFi后再试</string>
    <string name="setwifimacgo">跳转到设置</string>
    <string name="set">设置</string>
    <string name="quit">退出</string>
    <string name="src_show">源 :</string>
    <string name="quitlive">退出直播</string>
    <string name="quitmenu">菜单选项</string>
    <string name="nothing">暂无记录</string>
    <string name="changes">左右调节:</string>
    <string name="setVol">音量</string>
    <string name="setSou">换源</string>
    <string name="sou">源 1/1</string>
    <string name="sca">画面比例:</string>
    <string name="jiema">解码模式:</string>
    <string name="begin">开机启动:</string>
    <string name="tvsize">字体大小:</string>
    <string name="epgshow">节目预告:</string>
    <string name="hbwsjm">外省节目:</string>
    <string name="p2p_plugin">P2P插件:</string>
    <string name="state_open">已开启</string>
    <string name="state_close">已关闭</string>
    <string name="wsjm_open">显示</string>
    <string name="wsjm_close">隐藏</string>
    <string name="skin_default">中文</string>
    <string name="skin_tip">设置语言:</string>
    <string name="skin_blue">梦幻蓝</string>
    <string name="close">关闭</string>
    <string name="netid">设置我的网络收藏ID</string>
    <string name="huantaimoshi">上下换台:</string>
    <string name="channel_nom">正常</string>
    <string name="channel_turn">反转</string>
    <string name="bar">获取频道更新，请稍候！</string>
    <string name="onesource">当前节目只有一个直播源！</string>
    <string name="clickfast">切换过于频繁，请稍后点击！</string>
    <string name="nosource">当前节目无效,请选择其他节目播放</string>
    <string name="playing">正在播放 :</string>
    <string name="playnext">即将播放 :</string>
    <string name="look">以实际播放为准</string>
    <string name="netstop">网络故障</string>
    <string name="netstop_m">网络异常堵塞或未正常连接,请检查</string>
    <string name="wait">等待</string>
    <string name="netbreak">请检测网络连接是否正常！</string>
    <string name="changsm">播放不流畅,正在换源</string>
    <string name="kanqita">暂时无法播放,已自动为您换台</string>
    <string name="sccg">收藏成功！</string>
    <string name="scqx">已取消收藏！</string>
    <string name="s">源</string>
    <string name="d">段</string>
    <string name="huikanb">回看中,无法换源.</string>
    <string name="meihuibo">抱歉,当前节目暂不支持回看.</string>
    <string name="m">秒</string>
    <string name="open">开启</string>
    <string name="hold">加载中,请稍候...</string>
    <string name="hold_insert">Importing,please wait.</string>
    <string name="def">全屏</string>
    <string name="yuanshibilie">原始</string>
    <string name="uid">请输入uid绑定网络收藏数据</string>
    <string name="ok">确定</string>
    <string name="clock_go_channel">立即围观</string>
    <string name="clock_cancel">知道了</string>
    <string name="cans">取消</string>
    <string name="hint">请输入www.hdpfans.com的用户UID</string>
    <string name="banben">当前版本:</string>
    <string name="pingdaoguanli">频道管理</string>
    <string name="mdaoru">导入本地节目源</string>
    <string name="clear_reboot">清除缓存</string>
    <string name="clear_memory">内存清理</string>
    <string name="menu_app">应用推荐</string>
    <string name="menu_server">WIFI传源</string>
    <string name="notfav">当前节目无法收藏</string>
    <string name="huiboca">频道更新失败,请返回重试</string>
    <string name="menu_huikan">回看节目</string>
    <string name="menu_shengfen">省份设置</string>
    <string name="yingjie">硬解</string>
    <string name="ruanjie">软解</string>
    <string name="zhineng">智能</string>
    <string name="size_small">小</string>
    <string name="size_middle">中</string>
    <string name="size_large">大</string>
    <string name="epg_show">是</string>
    <string name="epg_not_show">否</string>
    <string name="recommend_app">HDP高清直播向您推荐</string>
    <string name="download_now">立即下载</string>
    <string name="version_unknow">未知版本</string>
    <string name="p2p_change_jiema_error">p2p源不支持切换解码</string>
    <string name="d_notext">文件夹内没有文本文件</string>
    <string name="d_daoruma">是否导入自定义列表</string>
    <string name="d_fugai">导入会覆盖之前的自定义列表</string>
    <string name="d_daoruok">成功导入</string>
    <string name="d_daoruok_t">条自定义</string>
    <string name="d_daoruok_tw">条网络收藏</string>
    <string name="d_jiami">需要加密您导入的列表吗?</string>
    <string name="d_nojiami">不输入则取消加密</string>
    <string name="hdpserver_port_value1">11111</string>
    <string name="hdpserver_port_value2">12321</string>
    <string name="man_jiemu">节目:</string>
    <string name="man_shanchu">删除:</string>
    <string name="man_wangji">密码忘记请重新导入</string>
    <string name="man_shurumima">请输入密码</string>
    <string name="man_shezhimima">设置密码</string>
    <string name="man_chongmima">重置密码</string>
    <string name="man_shumima">输入密码</string>
    <string name="man_shanchutype">删除本分类</string>
    <string name="man_huifutype">恢复本分类</string>
    <string name="shanchuzuijin">要清空最近播放记录吗？</string>
    <string name="ruanjiesomeiyou">未发现软解包,是否下载？</string>
    <string name="not_wifi">当前正在使用流量观看，建议切换到wifi环境下观看</string>
    <string name="fail_wifi">网络已断开！</string>
    <string name="options_ok">知道了</string>
    <string name="download_so">正在升级数据包：%1$s...</string>
    <string name="download_so_title">升级数据包...</string>
    <string name="switch_to_soft_decode_tip">切换到软解，未发现软解包，是否下载？</string>
    <string name="downsobegin">已为您开启后台下载，请稍候！</string>
    <string name="downsook">软解包下载完成，是否软解？</string>
    <string name="downsoing">正在下载软解包，请稍候！</string>
    <string name="tiphuikan">回看</string>
    <string name="manc_daoru">导入节目</string>
    <string name="manc_hidelast">隐藏该列表</string>
    <string name="manc_showlast">显示该列表</string>
    <string name="manc_showlastok">已显示</string>
    <string name="manc_hidelastok">已隐藏</string>
    <string name="qingchushuju">确定要清除所有数据？</string>
    <string name="timeout">超时设置</string>
    <string name="check_update">版本更新</string>
    <string name="timeout_del">普通源超时设置</string>
    <string name="timeout_p2p">P2P源超时设置</string>
    <string name="daoru0">格式错误,请检查后重试</string>
    <string name="loadqqdown">按返回键继续观看</string>
    <string name="morechan">点击添加更多频道</string>
    <string name="last_tv_hints">(长按OK键，可清空该列表)</string>
    <string name="list_tv_hints">(长按OK键，可收藏该节目)</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">"很抱歉，应用程序出现错误，即将退出。
如果在启动界面崩溃，建议您清除数据！"</string>
    <string name="submit_report">提交报告</string>
    <string name="chanmore_del_huifu">恢复外省地方台</string>
    <string name="chanmore_del_shanchu">隐藏外省地方台</string>
    <string name="bd_check">正在检查绑定状态</string>
    <string name="bd_touser">绑定账号</string>
    <string name="dndlwz">电脑登陆网址</string>
    <string name="shuma">输入配对码</string>
    <string name="wcbd">完成绑定</string>
    <string name="bdzdy">自定义频道</string>
    <string name="bdtimeout">(%1$s秒后失效)</string>
    <string name="bdisok">已绑定，请登陆</string>
    <string name="rebang">解除绑定</string>
    <string name="rebang_re">解除绑定将清空所有绑定的频道</string>
    <string name="menu_bang">绑定账号</string>
    <string name="devicedown">获取设备ID失败,无法完成绑定!</string>
    <string name="reboot">重启中</string>
    <string name="app_isdownloading">正在下载。</string>
    <string name="app_jsonerror">网络状况差,请稍后再试!</string>
    <string name="app_load">正在下载:</string>
    <string name="app_load_error">下载失败!</string>
    <string name="app_load_quit">下载已取消</string>
    <string name="app_update">更新</string>
    <string name="app_start">启动</string>
    <string name="app_del">卸载</string>
    <string name="app_jsonstart">获取应用中,请稍候···</string>
    <string name="app_jsonerror_tv">应用获取失败···</string>
    <string name="manchannel_sharelist">分享列表</string>
    <string name="changeruanjie">自动切换到软解模式</string>
    <string name="changeyingjie">自动切换到硬解模式</string>
    <string name="exit_img_link">退出图片链接</string>
    <string name="start_loading">LOADING···</string>
    <string name="downloading_tips">正在下载程序</string>
    <string name="msg_import_success">导入自定义节目成功</string>
    <string name="msg_import_failure">导入自定义节目失败,请检查格式是否正确。</string>
    <string name="channel_epg_item_event">正在播放：%1$s</string>
    <string name="long_time_tips">您已经连续观看２小时了，让眼晴休息一会儿吧！</string>
    <string name="def_dialog_title">提示</string>
    <string name="msg_update_pkg_downloading">正在下载升级包：%1$s</string>
    <string name="update_apk_install_error">安装出错</string>
    <string name="network_disconnected">网络已断开</string>
    <string name="network_connected">网络已连接</string>
    <string name="channel_change_to_default">频道未找到，已切换到默认台</string>
    <string name="channel_empty">频道为空</string>
    <string name="msg_update_soft_decode_so">需要更新软解包才能播放，是否下载？</string>
    <string name="vod_exit">返回直播</string>
    <string name="vod_continue">继续播放</string>
    <string name="faq1">无法播放</string>
    <string name="faq2">偶尔卡顿</string>
    <string name="faq3">黑屏</string>
    <string name="faq4">播放闪退</string>
    <string name="state_live">直播中</string>
    <string name="state_feedback">反馈</string>
</resources>
