<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/app_install_up" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/app_up_update" android:background="@drawable/app_bg_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_update" />
    <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/app_up_start" android:background="@drawable/app_bg_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_start" />
    <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/app_up_del" android:background="@drawable/app_bg_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_del" />
</LinearLayout>