<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/ch_root" android:background="@drawable/mybg" android:layout_width="400.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/changetype_left" android:layout_width="50.0dip" android:layout_height="40.0dip" android:src="@drawable/list_left_btn" />
        <TextView android:textSize="30.0sp" android:textColor="@color/orange" android:gravity="center" android:id="@id/live_channellist_layout_channeltype_txt" android:layout_width="290.0dip" android:layout_height="wrap_content" android:text="湖南卫视什么的" />
        <ImageView android:id="@id/changetype_right" android:layout_width="50.0dip" android:layout_height="40.0dip" android:src="@drawable/list_right_btn" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/channel_list_manage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/btn_more" android:text="@string/morechan" style="@style/live_list_bt_small" />
        <Button android:id="@id/btn_more_show" android:text="@string/chanmore_del_huifu" style="@style/live_list_bt_small" />
        <Button android:id="@id/btn_more_del" android:text="@string/chanmore_del_shanchu" style="@style/live_list_bt_small" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/channel_list_hints" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <hdp.widget.ShimmerTextView android:textSize="20.0sp" android:id="@id/tv_list_hints" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/list_tv_hints" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/channel_list_last" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <TextView android:textSize="20.0sp" android:id="@id/tv_last" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/last_tv_hints" />
    </LinearLayout>
    <ListView android:id="@id/live_channellist_layout_channel_list" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:divider="@drawable/diver" />
</LinearLayout>