<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bangding_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/button1" android:background="@drawable/back_my_fav" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90.0dip" android:layout_marginTop="100.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:onClick="Cancel" />
    <TextView android:textSize="38.0sp" android:id="@id/bd_tv_touser" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="98.0dip" android:text="@string/bd_touser" android:layout_toRightOf="@id/button1" />
    <LinearLayout android:orientation="vertical" android:id="@id/bd_layout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="80.0dip" android:layout_marginTop="30.0dip" android:layout_below="@id/button1" android:layout_alignLeft="@id/button1">
        <LinearLayout android:gravity="center_vertical" android:background="@drawable/paring_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip">
            <TextView android:textSize="30.0sp" android:gravity="center" android:id="@id/Bang_tvwz" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="www.baidu.com" android:layout_weight="1.0" />
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="32.0sp" android:gravity="center" android:id="@id/bd_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="TextView" />
                <TextView android:textSize="28.0sp" android:gravity="center" android:id="@id/bd_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/bdtimeout" />
            </LinearLayout>
            <TextView android:textSize="30.0sp" android:gravity="center" android:id="@id/textView4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/bdzdy" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip">
            <TextView android:textSize="25.0sp" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dndlwz" android:layout_weight="1.0" />
            <TextView android:textSize="25.0sp" android:gravity="center" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/shuma" android:layout_weight="1.0" />
            <TextView android:textSize="25.0sp" android:gravity="center" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wcbd" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/bd_layout_ok" android:visibility="gone" android:layout_width="680.0dip" android:layout_height="350.0dip" android:layout_marginTop="250.0dip" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/layout_btx" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/bd_touxiang" android:layout_width="160.0dip" android:layout_height="160.0dip" android:src="@drawable/default_forum_photo" />
            <TextView android:textSize="30.0sp" android:id="@id/bd_tv_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
        </LinearLayout>
        <ImageView android:id="@id/imageView1" android:layout_width="580.0dip" android:layout_height="180.0dip" android:src="@drawable/connect_bg" android:layout_toRightOf="@id/layout_btx" />
        <TextView android:textSize="27.0sp" android:id="@id/Bangoktv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="xxxxxxxxxxxxxxxxxxxx" android:layout_below="@id/layout_btx" android:layout_centerHorizontal="true" />
        <Button android:textSize="30.0sp" android:textColor="@color/white" android:id="@id/jiechubangding" android:background="@drawable/jiebang_btn" android:focusableInTouchMode="true" android:layout_width="180.0dip" android:layout_height="wrap_content" android:text="@string/rebang" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="ReBang" />
    </RelativeLayout>
    <TextView android:textSize="30.0sp" android:id="@id/textView_mac_uid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="146.0dip" android:layout_toRightOf="@id/bd_tv_touser" android:layout_alignTop="@id/button1" />
</RelativeLayout>