<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/bg_all" android:background="@drawable/mybg" android:layout_width="400.0dip" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="21.0sp" android:textColor="@color/yellow_pro" android:gravity="center" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="反馈问题" />
    <LinearLayout android:orientation="vertical" android:id="@id/line1" android:background="@drawable/horizol_divider" android:layout_width="400.0dip" android:layout_height="1.0dip" android:layout_marginLeft="0.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="0.0dip" android:layout_marginBottom="2.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/c1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip">
        <RelativeLayout android:orientation="horizontal" android:id="@id/lay_feedback1" android:background="@drawable/feed_selector" android:focusable="true" android:nextFocusRight="@id/gallery_vod" android:nextFocusDown="@id/exit_back_live" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="@color/channel_list_item_text" android:gravity="center" android:id="@id/tag_txt1" android:background="@null" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:text="@string/faq1" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/tag1" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/trail_tag" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/lay_feedback2" android:background="@drawable/feed_selector" android:focusable="true" android:nextFocusRight="@id/gallery_vod" android:nextFocusDown="@id/exit_back_live" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="@color/channel_list_item_text" android:gravity="center" android:id="@id/tag_txt2" android:background="@null" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:text="@string/faq2" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/tag2" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/trail_tag" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/lay_feedback3" android:background="@drawable/feed_selector" android:focusable="true" android:nextFocusRight="@id/gallery_vod" android:nextFocusDown="@id/exit_back_live" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="@color/channel_list_item_text" android:gravity="center" android:id="@id/tag_txt3" android:background="@null" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:text="@string/faq3" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/tag3" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/trail_tag" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:orientation="horizontal" android:id="@id/lay_feedback4" android:background="@drawable/feed_selector" android:focusable="true" android:nextFocusRight="@id/gallery_vod" android:nextFocusDown="@id/exit_back_live" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="@color/channel_list_item_text" android:gravity="center" android:id="@id/tag_txt4" android:background="@null" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:text="@string/faq4" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:layout_gravity="center|right" android:id="@id/tag4" android:focusable="false" android:layout_width="wrap_content" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/trail_tag" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>